<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Controller</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nc_header_text">网络配置</string>
    <string name="nc_ssid_text">SSID</string>
    <string name="nc_passwd_text">Passwd</string>
    <string name="nc_dev_name_text">Device Name</string>
    <string name="nc_start_text">开始配置</string>
    <string name="website">www.163.com</string>
    <string name="nc_stop_text">停止配置</string>
    <string name="dl_header_text">设备列表</string>
    <string name="da_header_text">创建新设备</string>
    <string name="dl_add_btn_desc">添加新设备用</string>
    <string name="da_back_btn_desc">返回</string>
    <string name="da_save_btn_text">保存</string>
    <string name="da_new_dev_name">新设备名称</string>
    <string name="dl_list_item_img_desc">设备类别图片</string>
    <string name="da_list_item_img_desc">用来表示设备种类选择</string>
    <string name="tv_str">电视</string>
    <string name="ac_str">空调</string>
    <string name="tvb_str">机顶盒</string>
    <string name="da_plz_input_name">请输入设备名称</string>
    <string name="da_plz_input_type">请输入设备种类</string>
    <string name="dl_dialog_del_dev">删除该设备</string>
    <string name="dl_dev_rep">设备已经存在</string>
    <string name="toast_wifi_not_connected_str">手机未连接WIFI</string>
    <string name="tv_vol_txt">音量</string>
    <string name="tv_ch_txt">频道</string>
    <string name="irs_txt_stop">停止学习</string>
    <string name="irs_txt_start">开始学习</string>
    <string name="irs_txt_timeout">学习超时</string>
    <string name="irs_txt_success">学习成功</string>
    <string name="irs_txt_empty">按键还未学习</string>
    <string name="irs_txt_except">请确认网络正常</string>
    <string name="irt_txt_send_ok">发送成功</string>
    <string name="irt_txt_send_failed">发送失败</string>
    <string name="irt_txt_no_ack">设备无响应</string>
</resources>
