<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@android:style/Theme.NoTitleBar.Fullscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/nc_bg_style" >

    <include
        android:id="@+id/net_conf_header"
        layout="@layout/net_conf_header" /> 

	<LinearLayout
        android:id="@+id/nc_input_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/net_conf_header"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/nc_min_margin_cutoff"
        android:background="@drawable/nc_input_table"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/nc_footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nc_ssid_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/nc_min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/nc_ssid_text"
                android:textColor="@color/black"
                android:textSize="@dimen/nc_input_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nc_ssid_input"
                android:layout_width="match_parent"
                android:background="@null"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical|right"
                android:layout_marginLeft="@dimen/nc_min_margin_cutoff"
                android:layout_marginRight="@dimen/nc_min_margin_cutoff"
                android:layout_weight="1"
                android:maxLength="32"
                android:paddingLeft="5dp"
                android:hint="@string/nc_ssid_text"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/nc_input_text_size" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/nc_min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/nc_footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nc_passwd_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/nc_min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/nc_passwd_text"
                android:textColor="@color/black"
                android:textSize="@dimen/nc_input_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nc_passwd_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/nc_min_margin_cutoff"
                android:layout_marginRight="@dimen/nc_min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:paddingLeft="5dp"
                android:hint="@string/nc_passwd_text"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/nc_input_text_size" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/nc_min_divider_height"
            android:background="@color/grey_background" />
        
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/nc_min_divider_height"
            android:background="@color/grey_background" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/nc_min_divider_height"
            android:background="@color/grey_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/nc_footer_height"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/nc_dev_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/nc_min_margin_cutoff"
                android:layout_weight="1"
                android:text="@string/nc_dev_name_text"
                android:textColor="@color/black"
                android:textSize="@dimen/nc_input_text_size"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nc_dev_name_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/nc_min_margin_cutoff"
                android:layout_marginRight="@dimen/nc_min_margin_cutoff"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/nc_dev_name_text"
                android:imeOptions="actionDone"
                android:paddingLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="@dimen/nc_input_text_size" />
        </LinearLayout>
    </LinearLayout>    

	<RelativeLayout
        android:id="@+id/nc_action"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/nc_input_table"
        android:layout_above="@+id/nc_footer"        
        android:layout_marginLeft="@dimen/nc_max_margin_size"
        android:layout_marginRight="@dimen/nc_max_margin_size" >

        <Button
            android:id="@+id/nc_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/nc_btn_selector"
            android:gravity="center"
            android:minHeight="@dimen/nc_header_height"
            android:text="@string/nc_start_text"
            android:textColor="@color/white"
            android:textSize="@dimen/nc_input_text_size" />

        <ProgressBar
            android:id="@+id/nc_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/nc_start"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="15dp"
            android:indeterminateDrawable="@drawable/nc_progress_draw"
            android:visibility="invisible" />
        
    </RelativeLayout>	

	<RelativeLayout
        android:id="@+id/nc_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/nc_header_bg" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:autoLink="web"
            android:gravity="center"
            android:text="@string/website"
            android:textColor="@color/black"
            android:textColorLink="@color/grey_text_color"
            android:textSize="@dimen/nc_input_text_size"
            android:textStyle="bold" />

    </RelativeLayout>	
		
</RelativeLayout>
